# SnakeGame

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: AssetManager.h  EndScreen.h  Game.h  GameOver.h  GamePlay.h  MainMenu.h  Pause.h  Snake.h  State.hpp  StateManager.h
src/: AssetManager.cpp  EndScreen.cpp  Game.cpp  GameOver.cpp  GamePlay.cpp  MainMenu.cpp  Pause.cpp  Snake.cpp  StateManager.cpp  main.cpp
